tests/integration/snapshots/tests__integration__parser__variable_c.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 5,
        },
        source: "c.foo",
        is_complex: false,
        body: [
            Expression(
                Variable(
                    VariableExpression {
                        span: Span {
                            start: 0,
                            end: 5,
                        },
                        lifetime: Context,
                        member: Property {
                            span: Span {
                                start: 0,
                                end: 5,
                            },
                            property: IdentifierReference {
                                span: Span {
                                    start: 2,
                                    end: 5,
                                },
                                name: "foo",
                            },
                        },
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
