tests/integration/snapshots/tests__integration__parser__variable_context.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 11,
        },
        source: "context.foo",
        is_complex: false,
        body: [
            Expression(
                Variable(
                    VariableExpression {
                        span: Span {
                            start: 0,
                            end: 11,
                        },
                        lifetime: Context,
                        member: Property {
                            span: Span {
                                start: 0,
                                end: 11,
                            },
                            property: IdentifierReference {
                                span: Span {
                                    start: 8,
                                    end: 11,
                                },
                                name: "foo",
                            },
                        },
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
