tests/integration/snapshots/tests__integration__parser__variable_variable.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 12,
        },
        source: "variable.foo",
        is_complex: false,
        body: [
            Expression(
                Variable(
                    VariableExpression {
                        span: Span {
                            start: 0,
                            end: 12,
                        },
                        lifetime: Variable,
                        member: Property {
                            span: Span {
                                start: 0,
                                end: 12,
                            },
                            property: IdentifierReference {
                                span: Span {
                                    start: 9,
                                    end: 12,
                                },
                                name: "foo",
                            },
                        },
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
